--- a/dev/css/style.scss
+++ b/dev/css/style.scss
@@ -42,4 +42,5 @@ $tablets: 768px;
 @import "./blocks/modal.scss";
 @import "./blocks/team.scss";
 @import "./blocks/products.scss";
-
+@import "./blocks/workin.scss";
+@import "./blocks/player.scss";
