--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -1915,3 +1915,81 @@ svg {
 .products__text {
   padding: 30px;
 }
+
+.workin__container {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.workin__player {
+  width: 660px;
+  margin: 0 auto;
+}
+
+.workin__title {
+  text-align: center;
+  padding-bottom: 40px;
+}
+
+.player {
+  position: relative;
+  font-size: 14px;
+  color: #fff;
+}
+
+.player__controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 10px 15px;
+  background-color: #292929;
+  width: 100%;
+}
+
+.player__start {
+  height: 18px;
+  width: 10px;
+  background: url("../img/icons/play.svg") left top no-repeat;
+  background-size: cover;
+  margin-right: 20px;
+}
+
+.player__playback {
+  width: 70%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: #333;
+  position: relative;
+  margin-right: 20px;
+}
+
+.player__playback-button {
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  background-color: #333;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  left: 0;
+}
+
+.player__splash {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: url(../img/splash.png) center center no-repeat;
+  background-size: cover;
+}
+
+.player.active .player__splash {
+  display: none;
+}
