--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -21,6 +21,8 @@ body {
   color: #666;
   margin: 0;
   padding: 0;
+  height: 100%;
+  overflow: hidden;
 }
 
 * {
@@ -75,6 +77,7 @@ svg {
 @media screen and (max-width: 768px) {
   .section {
     min-height: 55.5555555556rem;
+    height: 100%;
   }
 }
 @media screen and (max-width: 480px) {
@@ -106,11 +109,19 @@ svg {
   position: relative;
   display: flex;
   flex-direction: column;
+  height: 100%;
+  overflow: hidden;
 }
 
 .maincontent {
+  height: 100vh;
   transition: transform 0.6s;
   will-change: transform;
+}
+@media screen and (max-width: 768px) {
+  .maincontent {
+    height: 100%;
+  }
 }
 
 .title {
@@ -392,19 +403,19 @@ svg {
   }
 }
 
-.main-menu__close {
+.popup-menu__close {
   position: absolute;
   top: 1.6666666667rem;
   right: 0.8333333333rem;
   display: none;
 }
 @media screen and (max-width: 768px) {
-  .main-menu__close {
+  .popup-menu__close {
     display: block;
   }
 }
 @media screen and (max-width: 480px) {
-  .main-menu__close {
+  .popup-menu__close {
     display: block;
   }
 }
@@ -455,6 +466,10 @@ svg {
   align-items: center;
   background: #313131;
   z-index: 999;
+}
+
+.popup-menu.active {
+  display: flex;
 }
 
 .button {
@@ -1167,22 +1182,24 @@ svg {
   }
 }
 
-.navigation__item {
-  margin-bottom: 0.3333333333rem;
-}
-.navigation__item:last-child {
-  margin-bottom: 0;
+.navigation__link {
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  z-index: 10;
 }
 
-.navigation__link {
+.navigation__item {
   width: 0.8333333333rem;
   height: 0.8333333333rem;
   border-radius: 50%;
   border: 1px solid transparent;
   position: relative;
   display: block;
+  margin-bottom: 0.3333333333rem;
 }
-.navigation__link::before {
+.navigation__item::before {
   content: "";
   width: 0.2777777778rem;
   height: 0.2777777778rem;
@@ -1195,25 +1212,25 @@ svg {
   border-radius: 50%;
   background-color: #7b7b7b;
   display: block;
+  z-index: 1;
 }
-.navigation__link--active:before, .navigation__link:hover:before {
+.navigation__item--active:before, .navigation__item:hover:before {
   background-color: #E01F3D;
   transition: 0.33s ease-out;
 }
-.navigation__link:hover, .navigation__link--active {
+.navigation__item:hover, .navigation__item--active {
   border-color: #E01F3D;
   transition: 0.33s ease-out;
 }
+.navigation__item:last-child {
+  margin-bottom: 0;
+}
 
 .hamburger {
+  z-index: 9999;
   display: none;
 }
 @media screen and (max-width: 768px) {
-  .hamburger {
-    display: block;
-  }
-}
-@media screen and (max-width: 480px) {
   .hamburger {
     display: block;
   }
