--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -168,6 +168,11 @@ svg {
   justify-content: space-between;
   align-items: center;
 }
+@media screen and (max-width: 480px) {
+  .header__container {
+    padding: 0 10px;
+  }
+}
 
 @media screen and (max-width: 768px) {
   .header__main-menu {
@@ -383,18 +388,19 @@ svg {
 
 .popup-menu__close {
   position: absolute;
-  top: 1.6666666667rem;
-  right: 0.8333333333rem;
+  top: 1.7777777778rem;
   display: none;
 }
 @media screen and (max-width: 768px) {
   .popup-menu__close {
     display: block;
+    right: calc(2.5% + 1.5px);
   }
 }
 @media screen and (max-width: 480px) {
   .popup-menu__close {
     display: block;
+    right: calc(2.5% + 11.5px);
   }
 }
 
@@ -569,6 +575,7 @@ svg {
 @media screen and (max-width: 480px) {
   .why__title {
     font-size: 2.1111111111rem;
+    padding: 0 10px;
   }
 }
 
@@ -587,6 +594,7 @@ svg {
   .why__text {
     width: 95%;
     line-height: 1.3;
+    padding: 0 10px;
   }
 }
 
@@ -653,6 +661,7 @@ svg {
     text-align: left;
     align-content: center;
     margin-bottom: 0.5555555556rem;
+    padding: 0 10px;
   }
 }
 
@@ -787,6 +796,7 @@ svg {
 
 .review__image {
   width: 30%;
+  min-width: 130px;
   flex-shrink: 0;
   margin-right: 2.1111111111rem;
 }
@@ -918,6 +928,7 @@ svg {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    padding: 0 10px;
   }
 }
 
@@ -1365,14 +1376,6 @@ svg {
   }
 }
 
-.slider__arrows {
-  width: 100%;
-  position: relative;
-  max-width: 1150px;
-  margin: 0 auto;
-  min-width: 320px;
-}
-
 .slider__container {
   width: calc(100% - 60px);
   max-width: 940px;
@@ -1647,6 +1650,10 @@ svg {
   display: none;
 }
 
+.slick-arrow {
+  z-index: 1;
+}
+
 .slick-prev,
 .slick-next {
   position: absolute;
@@ -1850,6 +1857,11 @@ svg {
 .products__container {
   height: 100%;
 }
+@media screen and (max-width: 480px) {
+  .products__container {
+    padding: 0 10px;
+  }
+}
 
 .products__title {
   padding-top: 6.3888888889rem;
@@ -1888,6 +1900,11 @@ svg {
   justify-content: flex-end;
   padding-bottom: 1.9444444444rem;
 }
+@media screen and (max-width: 480px) {
+  .products__link {
+    width: 50px;
+  }
+}
 
 .products__name {
   font-weight: bold;
@@ -1895,6 +1912,11 @@ svg {
   line-height: 100px;
   transform: rotate(270deg);
   white-space: nowrap;
+}
+@media screen and (max-width: 480px) {
+  .products__name {
+    font-size: 1rem;
+  }
 }
 
 .products__desc {
@@ -1909,6 +1931,7 @@ svg {
 
 .products__text {
   padding: 30px;
+  font-size: 0.7777777778rem;
 }
 
 .workin__container {
@@ -1919,7 +1942,8 @@ svg {
 }
 
 .workin__player {
-  width: 660px;
+  width: 90%;
+  max-width: 600px;
   margin: 0 auto;
 }
 
@@ -1954,6 +1978,11 @@ svg {
   margin-right: 20px;
 }
 
+.player__start.active {
+  background: url("../img/icons/pause.png") center center no-repeat;
+  background-size: 100% auto;
+}
+
 .player__playback {
   width: 70%;
   height: 4px;
@@ -1961,6 +1990,15 @@ svg {
   background-color: #333;
   position: relative;
   margin-right: 20px;
+}
+
+.player__playback-active {
+  height: 4px;
+  border-radius: 2px;
+  background-color: #E01F3D;
+  position: relative;
+  margin-right: 20px;
+  position: absolute;
 }
 
 .player__playback-button {
@@ -1973,6 +2011,10 @@ svg {
   bottom: 0;
   margin: auto;
   left: 0;
+}
+
+.player__playback-button.active {
+  background-color: #E01F3D;
 }
 
 .player__splash {
