--- a/dev/css/blocks/order-form.scss
+++ b/dev/css/blocks/order-form.scss
@@ -11,6 +11,8 @@
         display:block;
         margin-left:auto;
         margin-right: auto;
+        
+        padding:0 10px;
     }
     color: #fff;
 
