--- a/dev/css/blocks/header.scss
+++ b/dev/css/blocks/header.scss
@@ -14,6 +14,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    @include phones {
+        
+        padding:0 10px;
+    }
 }
 .header__main-menu {
     @include tablets {
