--- a/dev/css/blocks/navigation.scss
+++ b/dev/css/blocks/navigation.scss
@@ -18,15 +18,15 @@
 
 }
 
-.navigation__item {
-    margin-bottom: rem(6px);
-
-    &:last-child {
-        margin-bottom: 0;
-    }
+.navigation__link {
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    z-index:10;
 }
 
-.navigation__link {
+.navigation__item {
     width: rem(15px);
     height: rem(15px);
     border-radius: 50%;
@@ -43,6 +43,7 @@
         border-radius: 50%;
         background-color: rgb(123, 123, 123);
         display:block;
+        z-index:1;
     }
     &--active:before, &:hover:before {
         background-color: $red;
@@ -52,4 +53,10 @@
         border-color: $red;
         transition: 0.33s ease-out;
     }
+    margin-bottom: rem(6px);
+
+    &:last-child {
+        margin-bottom: 0;
+    }
+
 }
