--- a/dev/css/blocks/player.scss
+++ b/dev/css/blocks/player.scss
@@ -24,6 +24,12 @@
     margin-right:20px;
 }
 
+
+.player__start.active {
+    background: url('../img/icons/pause.png') center center no-repeat;
+    background-size: 100% auto;
+}
+
 .player__playback {
 
     width:70%;
@@ -35,6 +41,14 @@
     
 }
 
+.player__playback-active {
+    height:4px;
+    border-radius:2px;
+    background-color: $red;
+    position:relative;
+    margin-right:20px;
+    position:absolute;
+}
 
 .player__playback-button {
 
@@ -48,6 +62,10 @@
     margin:auto;
     left:0;
 
+}
+
+.player__playback-button.active {
+    background-color: $red;
 }
 
 .player__splash {
