--- a/dev/css/blocks/review.scss
+++ b/dev/css/blocks/review.scss
@@ -22,6 +22,7 @@
 
 .review__image {
     width:30%;
+    min-width:130px;
     flex-shrink: 0;
     margin-right: rem(38px);
     @include tablets {
