--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -1,6 +1,7 @@
 @import "./layout/normalize.css";
 html {
   font-size: 18px;
+  height: 100%;
 }
 @media screen and (max-width: 768px) {
   html {
@@ -21,6 +22,8 @@ body {
   color: #666;
   margin: 0;
   padding: 0;
+  height: 100%;
+  overflow: hidden;
 }
 
 * {
@@ -69,28 +72,11 @@ svg {
 }
 
 .section {
-  height: 100vh;
-  min-height: 36.1111111111rem;
-}
-@media screen and (max-width: 768px) {
-  .section {
-    min-height: 55.5555555556rem;
-  }
-}
-@media screen and (max-width: 480px) {
-  .section {
-    min-height: 800px;
-  }
+  height: 100%;
 }
 
 .hidden {
   overflow: hidden;
-}
-
-@media screen and (max-width: 480px) {
-  .section--big {
-    min-height: 52.7777777778rem;
-  }
 }
 
 .container {
@@ -106,9 +92,12 @@ svg {
   position: relative;
   display: flex;
   flex-direction: column;
+  height: 100%;
+  overflow: hidden;
 }
 
 .maincontent {
+  height: 100%;
   transition: transform 0.6s;
   will-change: transform;
 }
@@ -178,6 +167,11 @@ svg {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+@media screen and (max-width: 480px) {
+  .header__container {
+    padding: 0 10px;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -392,20 +386,21 @@ svg {
   }
 }
 
-.main-menu__close {
+.popup-menu__close {
   position: absolute;
-  top: 1.6666666667rem;
-  right: 0.8333333333rem;
+  top: 1.7777777778rem;
   display: none;
 }
 @media screen and (max-width: 768px) {
-  .main-menu__close {
+  .popup-menu__close {
     display: block;
+    right: calc(2.5% + 1.5px);
   }
 }
 @media screen and (max-width: 480px) {
-  .main-menu__close {
+  .popup-menu__close {
     display: block;
+    right: calc(2.5% + 11.5px);
   }
 }
 
@@ -455,6 +450,10 @@ svg {
   align-items: center;
   background: #313131;
   z-index: 999;
+}
+
+.popup-menu.active {
+  display: flex;
 }
 
 .button {
@@ -576,6 +575,7 @@ svg {
 @media screen and (max-width: 480px) {
   .why__title {
     font-size: 2.1111111111rem;
+    padding: 0 10px;
   }
 }
 
@@ -594,6 +594,7 @@ svg {
   .why__text {
     width: 95%;
     line-height: 1.3;
+    padding: 0 10px;
   }
 }
 
@@ -660,6 +661,7 @@ svg {
     text-align: left;
     align-content: center;
     margin-bottom: 0.5555555556rem;
+    padding: 0 10px;
   }
 }
 
@@ -794,6 +796,7 @@ svg {
 
 .review__image {
   width: 30%;
+  min-width: 130px;
   flex-shrink: 0;
   margin-right: 2.1111111111rem;
 }
@@ -925,6 +928,7 @@ svg {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    padding: 0 10px;
   }
 }
 
@@ -1167,22 +1171,24 @@ svg {
   }
 }
 
-.navigation__item {
-  margin-bottom: 0.3333333333rem;
-}
-.navigation__item:last-child {
-  margin-bottom: 0;
+.navigation__link {
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  z-index: 10;
 }
 
-.navigation__link {
+.navigation__item {
   width: 0.8333333333rem;
   height: 0.8333333333rem;
   border-radius: 50%;
   border: 1px solid transparent;
   position: relative;
   display: block;
+  margin-bottom: 0.3333333333rem;
 }
-.navigation__link::before {
+.navigation__item::before {
   content: "";
   width: 0.2777777778rem;
   height: 0.2777777778rem;
@@ -1195,25 +1201,25 @@ svg {
   border-radius: 50%;
   background-color: #7b7b7b;
   display: block;
+  z-index: 1;
 }
-.navigation__link--active:before, .navigation__link:hover:before {
+.navigation__item--active:before, .navigation__item:hover:before {
   background-color: #E01F3D;
   transition: 0.33s ease-out;
 }
-.navigation__link:hover, .navigation__link--active {
+.navigation__item:hover, .navigation__item--active {
   border-color: #E01F3D;
   transition: 0.33s ease-out;
 }
+.navigation__item:last-child {
+  margin-bottom: 0;
+}
 
 .hamburger {
+  z-index: 9999;
   display: none;
 }
 @media screen and (max-width: 768px) {
-  .hamburger {
-    display: block;
-  }
-}
-@media screen and (max-width: 480px) {
   .hamburger {
     display: block;
   }
@@ -1368,14 +1374,6 @@ svg {
   .slider__item {
     display: block;
   }
-}
-
-.slider__arrows {
-  width: 100%;
-  position: relative;
-  max-width: 1150px;
-  margin: 0 auto;
-  min-width: 320px;
 }
 
 .slider__container {
@@ -1652,6 +1650,10 @@ svg {
   display: none;
 }
 
+.slick-arrow {
+  z-index: 1;
+}
+
 .slick-prev,
 .slick-next {
   position: absolute;
@@ -1855,6 +1857,11 @@ svg {
 .products__container {
   height: 100%;
 }
+@media screen and (max-width: 480px) {
+  .products__container {
+    padding: 0 10px;
+  }
+}
 
 .products__title {
   padding-top: 6.3888888889rem;
@@ -1893,6 +1900,11 @@ svg {
   justify-content: flex-end;
   padding-bottom: 1.9444444444rem;
 }
+@media screen and (max-width: 480px) {
+  .products__link {
+    width: 50px;
+  }
+}
 
 .products__name {
   font-weight: bold;
@@ -1900,6 +1912,11 @@ svg {
   line-height: 100px;
   transform: rotate(270deg);
   white-space: nowrap;
+}
+@media screen and (max-width: 480px) {
+  .products__name {
+    font-size: 1rem;
+  }
 }
 
 .products__desc {
@@ -1914,6 +1931,7 @@ svg {
 
 .products__text {
   padding: 30px;
+  font-size: 0.7777777778rem;
 }
 
 .workin__container {
@@ -1924,7 +1942,8 @@ svg {
 }
 
 .workin__player {
-  width: 660px;
+  width: 90%;
+  max-width: 600px;
   margin: 0 auto;
 }
 
@@ -1959,6 +1978,11 @@ svg {
   margin-right: 20px;
 }
 
+.player__start.active {
+  background: url("../img/icons/pause.png") center center no-repeat;
+  background-size: 100% auto;
+}
+
 .player__playback {
   width: 70%;
   height: 4px;
@@ -1966,6 +1990,15 @@ svg {
   background-color: #333;
   position: relative;
   margin-right: 20px;
+}
+
+.player__playback-active {
+  height: 4px;
+  border-radius: 2px;
+  background-color: #E01F3D;
+  position: relative;
+  margin-right: 20px;
+  position: absolute;
 }
 
 .player__playback-button {
@@ -1978,6 +2011,10 @@ svg {
   bottom: 0;
   margin: auto;
   left: 0;
+}
+
+.player__playback-button.active {
+  background-color: #E01F3D;
 }
 
 .player__splash {
